--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -7,6 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
@@ -23,6 +26,20 @@
   <video th:fragment="background-video" id="background-video" autoplay loop muted poster="">
   <source src="vid/face-time.mp4" type="video/mp4">
 </video>
+
+	 <div th:fragment="footer" class="footer-basic">
+        <footer>
+            <div class="social"><a href="/doigt"><i class="icon ion-social-instagram"></i></a><a href="/doigt"><i class="icon ion-social-snapchat"></i></a><a href="/doigt"><i class="icon ion-social-twitter"></i></a><a href="/doigt"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="/doigt">Accueil</a></li>
+                <li class="list-inline-item"><a href="/doigt">Services</a></li>
+                <li class="list-inline-item"><a href="/doigt">A propos</a></li>
+                <li class="list-inline-item"><a href="/doigt">Termes</a></li>
+                <li class="list-inline-item"><a href="/doigt">Politique de confidentialité</a></li>
+            </ul>
+            <p class="copyright">TayInfos © 2021</p>
+        </footer>
+    </div>
   
       
      <nav style=" opacity: 1;" th:fragment="nav" class="fixed-top navbar navbar-expand-lg navbar-light bg-danger">
