--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,10 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
 <!--     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
+        <link th:href="@{css/footer.css}" rel="stylesheet" />
     <link th:href="@{css/fire.css}" rel="stylesheet" />
 </head>
 <body class="">
@@ -22,7 +24,7 @@
 
 
 
-
+				<div th:replace="_nav-components :: footer">...</div>
 
 	<script type="text/javascript" th:src="@{/js/test.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
