--- a/src/main/resources/templates/reunion-infos.html
+++ b/src/main/resources/templates/reunion-infos.html
@@ -54,14 +54,14 @@
 </div> 
 		</div>
 		<div class="col-md-3">
-		<div th:if="${#lists.size(cracklist) gt 0}" class="" style="width:100%; border: 3px solid green; padding: 10px; margin-bottom: 5px; background-color: white;">
+		<div th:if="${#lists.size(cracklist) gt 0}" class="" style="width:100%; border: 3px solid blue; padding: 10px; margin-bottom: 5px; background-color: white;">
 <h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Cracks du jour R[[${reunionstring}]] (+30pts):</h5>
   <p th:each="c : ${cracklist}"><strong th:if="${c.numero lt 10}">[[${c.C}]]0[[${c.numero}]] </strong><strong th:if="${c.numero gt 9}">[[${c.C}]][[${c.numero}]] </strong> ([[${c.noteProno}]] pts) <strong th:if="${c.ranking == 1}" class="text-success">&nbsp; Gagnant ([[${c.liveOdd}]]/1) </strong><strong class="text-danger" th:if="${c.isRunning eq false}">&nbsp; Non-partant </strong></p>
 </div> 
 </div>
 		<div class="col-md-3">
 		<div th:if="${#lists.size(placelist) gt 0}" class="" style="width:100%; border: 3px solid green; padding: 10px; margin-bottom: 5px; background-color: white;">
-<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Placés du jour R[[${reunionstring}]] (100% à la place):</h5>
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Placés du jour R[[${reunionstring}]] (100% dans les 3):</h5>
   <p th:each="c : ${placelist}"><strong th:if="${c.numero lt 10}">[[${c.C}]]0[[${c.numero}]] </strong><strong th:if="${c.numero gt 9}">[[${c.C}]][[${c.numero}]] </strong><strong th:if="${c.numberOfInitialRunners gt 7 and (c.ranking == 1 or c.ranking == 2 or c.ranking == 3)}" class="text-success">&nbsp; Placé </strong><strong th:if="${c.numberOfInitialRunners lt 8 and (c.ranking == 1 or c.ranking == 2)}" class="text-success">&nbsp; Placé </strong><strong class="text-danger" th:if="${c.isRunning eq false}">&nbsp; Non-partant </strong></p>
 </div> 
 		</div>
